Fixed UI spacing, updated font style, and increased cat GIF size

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     background-color:whitesmoke
 }
 
@@ -20,15 +20,16 @@ form {
 
 input, button {
     
-    padding: 8px;
+    padding: 9px;
     width: 100%;
-    margin: 10px 0; /* 10px top and bottom spacing */
+    margin: 6px 0; /* 10px top and bottom spacing */
     box-sizing: border-box;
 }
 
 
 button {
     background-color: #3498db;
+    margin-top: 12px;
     color: white;
     border: none;
     cursor: pointer;
@@ -45,7 +46,7 @@ button:hover {
         width: 100%;
         max-width: 100%;
         overflow-x: auto;   /* scrolls on mobile */
-        margin-top: 3px;
+        margin-top: 10px;
 }
 
 /* Table styling */
@@ -77,10 +78,10 @@ th {
  .cat-gif {
     
     display: block;
-    margin: 20px auto;
-    width: 25vw;        /* scales with screen width */
-    max-width: 200px;
-    min-width: 100px;
+    margin: 15px auto;
+    width: 50vw;        /* scales with screen width */
+    max-width: 320px;
+    min-width: 180px;
     height: auto;
     animation: pop 2s ease;
 }
